crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__not_prefix.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "node": {
      "lhs": {
        "name": "name",
        "type": "attr"
      },
      "op": "eq",
      "raw": "name = 'Foo'",
      "rhs": {
        "type": "string",
        "value": "Foo"
      },
      "type": "atom"
    },
    "type": "not"
  }
}
