crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__pair_binding_outside_pairs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `a.name = b.name`: pair binding `a` is only valid inside `pairs(...)` filters",
  "input": "a.name = b.name"
}
