crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__pair_bound_collection_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "domain": {
            "kind": "method",
            "type": "children"
          },
          "type": "pairs"
        },
        "filter": {
          "lhs": {
            "expr": {
              "name": "lines",
              "type": "projection"
            },
            "type": "number"
          },
          "op": "le",
          "raw": "lines <= size(a.param.name intersect b.param.name)",
          "rhs": {
            "expr": {
              "expr": {
                "left": {
                  "domain": {
                    "kind": "param",
                    "type": "children"
                  },
                  "path": [
                    "name"
                  ],
                  "side": "a",
                  "type": "pair_projection"
                },
                "op": "intersect",
                "right": {
                  "domain": {
                    "kind": "param",
                    "type": "children"
                  },
                  "path": [
                    "name"
                  ],
                  "side": "b",
                  "type": "pair_projection"
                },
                "type": "binary"
              },
              "type": "size"
            },
            "type": "number"
          },
          "type": "atom"
        },
        "type": "count"
      },
      "type": "number"
    },
    "op": "eq",
    "raw": "count(pairs(method), lines <= size(a.param.name intersect b.param.name)) = 0",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 0.0
      },
      "type": "number"
    },
    "type": "atom"
  }
}
